# StructureYourStory

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: exporters.rs  main.rs  models.rs  registry.rs
structures/: novel_save_the_cat_writes_a_novel.json  novel_seven_point.json  novel_snowflake.json  screenplay_save_the_cat.json  screenplay_story_circle.json  screenplay_three_act.json
