[package]
name = "structure_your_story"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sys"
path = "src/main.rs"

[dependencies]
inquire = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4"] }
colored = "2.1"
rust-embed = "8.3"
printpdf = "0.7"
ratatui = "0.26"
crossterm = "0.27"
